tdf#125071 PPTX: fix missing custom slide show export

Change-Id: I2a85e2ea08f6a70cd5f26cfb99a0ff1add2c296a